<resources>
    <string name="app_name">iCashier</string>
    <string name="google_maps_key">AIzaSyCBzbAuqFFpPrbfwntfCwFAzHAQyCDaGqE</string>
    <string name="permission_required">Permission Required</string>
    <string name="location_permission">App needs this permission to access your location. Are you sure you want to deny this permission ?</string>
    <string name="camera_permission">App needs this permission to capture photos using phone\'s camera. Are you sure you want to deny this permission ?</string>
    <string name="deny">Deny</string>
    <string name="grant">Grant</string>
    <string name="error_generic">Something went wrong</string>
    <string name="network_error">Not connected to Internet</string>
    <string name="location_error">Unable to get your location.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="signout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="resend_otp_msg">Please resend OTP.</string>
    <string name="invalid_access">You are logged in to other device.</string>
    <string name="empty_email_or_username">Please enter email or username.</string>
    <string name="empty_password">Please enter password.</string>
    <string name="empty_email">Please enter email.</string>
    <string name="valid_email">Please enter a valid email.</string>
    <string name="valid_username">Please enter a valid username.</string>
    <string name="valid_mobile">Please enter a valid mobile number.</string>
    <string name="valid_password">Password must be at least 6 characters long.</string>
    <string name="valid_confirm_pass">Password does not match.</string>
    <string name="empty_name">Please enter name.</string>
    <string name="empty_confrim_password">Please enter confirm password.</string>
    <string name="empty_mobile">Please enter mobile number.</string>
    <string name="empty_country">Please select the country.</string>
    <string name="empty_location">Please select the location.</string>
    <string name="valid_otp">Please enter valid OTP.</string>
    <string name="empty_account_no">Please enter account number.</string>
    <string name="empty_document">Please select a document.</string>
    <string name="inavlid_account">Account number must be 16 digits long.</string>
    <string name="empty_old_pass">Please enter old password.</string>
    <string name="same_old_new_pass">New password must be different from old password.</string>
    <string name="empty_title">Please enter Title.</string>
    <string name="empty_tagline">Please enter Tagline.</string>
    <string name="empty_services">Please select services.</string>
    <string name="empty_logo">Please select restaurant logo.</string>
    <string name="empty_restaurant_image">Plese select atleast 1 image for restaurant</string>
    <string name="empty_country_name">Please enter country name.</string>
    <string name="empty_city_name">Please enter city name.</string>
    <string name="empty_landmark">Please enter landmark.</string>
    <string name="empty_address">Please enter your address.</string>
    <string name="empty_user_name">Please enter your name.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="signup">SignUp</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="otp_has_been_sent_to_mobile_no">OTP has been sent to mobile no</string>
    <string name="didn_t_receive_code">Didn\'t Receive Code?</string>
    <string name="resend_now">Resend Now</string>
    <string name="verify">Verify</string>
    <string name="forgot_pass_header">Forgot Password</string>
    <string name="enter_your_registered_email_id">Enter your registered email id</string>
    <string name="email_id">Email Id</string>
    <string name="a_password_reset_link_will_be_sent_to_registered_email_address">A password reset link will be sent to registered email address</string>
    <string name="submit">Submit</string>
    <string name="complete_plans">Complete Plans</string>
    <string name="choose_plans">Choose Plans</string>
    <string name="verified">Verified</string>
    <string name="free">Free</string>
    <string name="non_verified">Non-Verified</string>
    <string name="services">Services</string>
    <string name="price">Price</string>
    <string name="you_can_generate_unlimited_qr_code">You can Generate Unlimited QR Code</string>
    <string name="bank_account">Bank Account</string>
    <string name="attach_document">Attach Document</string>
    <string name="remove">Remove</string>
    <string name="upload">Upload</string>
    <string name="merchant_home">Merchant Home</string>
    <string name="cashier">Cashier</string>
    <string name="generate_code">Generate Code</string>
    <string name="items">Items</string>
    <string name="deals">Deals</string>
    <string name="categories_meals_extras"><![CDATA[Categories, Meals & Extras]]></string>
    <string name="transactions">Transactions</string>
    <string name="invoices">Invoices</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="help">Help</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="title">Title</string>
    <string name="tagline">Tagline</string>
    <string name="network">Network</string>
    <string name="location">Location</string>
    <string name="take_naway">Take\nAway</string>
    <string name="dine_in">Dine\nIn</string>
    <string name="delivery">Delivery</string>
    <string name="large_screen">Large\nScreen</string>
    <string name="party">Party</string>
    <string name="vegan">Vegan</string>
    <string name="add_deal">Add Deal</string>
    <string name="promote_item">Promote Item</string>
    <string name="search">Search...</string>
    <string name="smoking_area">Smoking\narea</string>
    <string name="live_tv">Live TV</string>
    <string name="reservation">Reservation</string>
    <string name="parking">Parking</string>
    <string name="catering">Catering</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confrim_new_password">Confrim New Password</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="push_notification">Push Notification</string>
    <string name="valid_new_password">New password must be at least 6 characters long</string>
    <string name="arabic">عربى</string>
    <string name="english">English</string>
    <string name="empty_icon">Please select an icon for category.</string>
    <string name="empty_primary_category">Please select primary category.</string>
    <string name="delete_category_alert">Are you sure you want to delete this primary category?</string>
    <string name="delete_subcat_alert">Are you sure you want to delete this secondary category?</string>
    <string name="radio_button">Radio Button</string>
    <string name="check_box">CheckBox</string>
    <string name="empty_price">Please enter price.</string>
    <string name="delete_extra_alert">Are you sure you want to delete this extra?</string>
    <string name="existing_extras">Existing Extras</string>
    <string name="empty_items">Please select atleast 1 item to add.</string>
    <string name="empty_table_name">Please enter table name.</string>
    <string name="delete_table_alert">Are you sure you want to delete this table?</string>
    <string name="empty_meal_items">Please add items to meal.</string>
    <string name="delete_meal_alert">Are you sure you want to delete this meal?</string>
    <string name="empty_payment_mode">Please select the mode of payment.</string>
    <string name="empty_table">Please enter the table name.</string>
    <string name="empty_item">Please enter name.</string>
    <string name="empty_delivery_mode">Please select the mode of delivery.</string>
    <string name="delete_qr_alert">Are you sure you want to delete this qr code?</string>
    <string name="categories">Categories</string>
    <string name="meals">Meals</string>
    <string name="extras">Extras</string>
    <string name="tittle">Title:</string>
    <string name="category_level">Category Level:</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="primary_category">Primary Category:</string>
    <string name="existing_categories">Existing Categories</string>
    <string name="price_label">Price:</string>
    <string name="items_label">Items:</string>
    <string name="existing_meals">Existing Meals</string>
    <string name="type">Type:</string>
    <string name="new_item">New Item</string>
    <string name="existing_items">Existing Items</string>
    <string name="item">Item</string>
    <string name="size">Size</string>
    <string name="quantity_label">Quantity</string>
    <string name="empty_quantity">Please enter quantity.</string>
    <string name="empty_item_image">Please select an image for item.</string>
    <string name="empty_secondary_category">Please select secondary category.</string>
    <string name="delete_item_alert">Are you sure you want to delete this item?</string>
    <string name="size_already_selected">Item size already selected.</string>
    <string name="name_label">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="secondary_category">Secondary Category:</string>
    <string name="sale">Sale:</string>
    <string name="extras_label">Extras:</string>
    <string name="about">About:</string>
    <string name="dine_in_tab">Dine In</string>
    <string name="take_out_tab">Take Out</string>
    <string name="codes">Codes</string>
    <string name="select_payment">Select Payment:</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="paypal">PayPal</string>
    <string name="select_table">Enter table name:</string>
    <string name="select_name">Enter Name:</string>
    <string name="select_item">Select Item:</string>
    <string name="select_delivery">Select Delivery:</string>
    <string name="pickup">Pickup</string>
    <string name="swift_delivery">Swift Delivery</string>
    <string name="insta_delivery">Insta Delivery</string>
    <string name="order">Order</string>
    <string name="update">Update</string>
    <string name="select_items">Select Items</string>
    <string name="add_today_special">Add Today Special</string>
    <string name="no_extras_found">No Extras found.</string>
    <string name="no_items_found">No items found.</string>
    <string name="no_codes_found">No codes found.</string>
    <string name="notify_customers_when_order_is_ready_for_pickup">Notify customers when order is ready for pickup:</string>
    <string name="delivery_duration">Delivery Duration:</string>
    <string name="cash_on_delivery">Cash on delivery:</string>
    <string name="delivery_services">Delivery Services:</string>
    <string name="auto_cashier">Auto Cashier:</string>
    <string name="taxes">Taxes</string>
    <string name="general">General</string>
    <string name="coupons">Coupons</string>
    <string name="hours">Hours</string>
    <string name="pays">Pay</string>
    <string name="payment_method">PAYMENT METHOD</string>
</resources>