<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:layoutDirection="locale"
        android:id="@+id/clParentLayout"
        tools:context=".activity.LoginActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
             />

        <LinearLayout
            android:id="@+id/centerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:elevation="@dimen/_5dp"
                android:src="@drawable/icon_logo_login" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="@dimen/_280dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="@dimen/_280dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/cairo_regular"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="80"
                android:maxLines="1"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/forgot_password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/bg_btn_red"
                android:elevation="@dimen/_5dp"
                android:fontFamily="@font/cairo_semibold"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:fontFamily="@font/cairo_light"
                    android:text="@string/new_user"
                    android:textSize="@dimen/_18sp" />

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/signup"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_18sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>