<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:orientation="horizontal"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20dp"
        android:orientation="vertical"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/payment_method"
            android:shadowColor="#ff6cc450"
            android:shadowRadius="5"
            android:shadowDy="5"
            android:background="@drawable/bg_et_border"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:textSize="@dimen/_20sp"
            android:fontFamily="@font/cairo_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_marginTop="@dimen/_30dp"
            android:id="@+id/rdGroupSelecction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdPaytab"
                android:drawableEnd="@drawable/payment_gatways"
                android:drawablePadding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdStc"
                android:layout_marginTop="@dimen/_30dp"
                android:drawableEnd="@drawable/stc_img"
                android:drawablePadding="@dimen/_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <EditText
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:visibility="gone"
            android:id="@+id/edtPaymentTyeMobile"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/bg_field"
            android:digits="0123456789"
            android:maxLength="12"
            android:hint="@string/mobile"
            android:paddingStart="@dimen/_10dp"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"/>

        <LinearLayout
            android:layout_marginBottom="@dimen/_10dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_40dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPaymentTyeCancel"
                android:background="@drawable/bg_btn_red"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                android:fontFamily="@font/cairo_regular"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnPaymentTyeOk"
                android:layout_marginStart="@dimen/_20dp"
                android:background="@drawable/bg_tab_orange"
                android:layout_width="wrap_content"
                android:text="@string/pays"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                android:fontFamily="@font/cairo_regular"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</layout>