<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_65dp"
        android:background="@drawable/bg_frame"
        android:elevation="@dimen/_2dp"
        android:padding="@dimen/_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40dp"
            android:padding="@dimen/_30dp"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:paddingStart="@dimen/_20dp"
                android:paddingEnd="@dimen/_20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_header_existing_item"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16sp"
                            android:fontFamily="@font/cairo_semibold"
                            android:text="@string/item"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16sp"
                            android:fontFamily="@font/cairo_semibold"
                            android:text="@string/price"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16sp"
                            android:fontFamily="@font/cairo_semibold"
                            android:text="@string/size"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_5dp"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/_16sp"
                            android:fontFamily="@font/cairo_semibold"
                            android:text="@string/quantity_label"
                            />
                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </android.support.constraint.ConstraintLayout>


                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5dp">

                <TextView
                    android:id="@+id/tvEmptyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50dp"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/no_items_found"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvExistingItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_50dp" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:background="@drawable/bg_red_btn"
                    android:fontFamily="@font/cairo_regular"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCancel" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_40dp"
                    android:background="@drawable/bg_red_btn"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
</layout>